--- a/static_files/static/css/style.css
+++ b/static_files/static/css/style.css
@@ -15,23 +15,39 @@ html{
 }
 
 .navbar .log_reg_button{
-    background: linear-gradient(#0217FF, #ed4099) !important;
+    background: #000 !important;
+    box-shadow: 1px 1px 10px #b2b2e2;
     border: none !important;
     color: #fff;
 }
 
+.navbar .log_reg_button:hover{
+    box-shadow: 1px 1px 3px #b2b2e2;
+}
+
+.navbar .log_reg_button:hover,
+.navbar .log_reg_button.show{
+    color: #ed4099 !important;
+    transition: .1s linear;
+}
+
 .add_post_title{
-    color: #fff;
+    color: #ed4099;
     margin-top: 0 !important;
 }
 
-.navbar .dropdown ul{
-    background: linear-gradient(#0217FF, #ed4099) !important;
-    border: none !important
+.add_post_box ul li{
+    color: #ed4099;
 }
 
-.navbar .dropdown ul,
-.navbar .log_reg_button{
+.navbar .dropdown ul{
+    background: #000 !important;
+    box-shadow: 1px 1px 10px #b2b2e2;
+    border: none !important;
+    color: #fff;
+}
+
+.navbar .dropdown ul{
     background: rgba( 255, 255, 255, 0.15 );
     box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
     backdrop-filter: blur( 0.5px );
@@ -45,15 +61,223 @@ html{
 }
 
 .main{
-    background: linear-gradient(#0217FF, #ed4099) !important; 
+    background: #000;
 }
 
 body{
     height: 100%;
     min-height: 100vh;
-    background-repeat: no-repeat !important;
+    background: #000 !important;
 }
 
+.player_container{
+    background-image: url('../images/player_background/player_back.jpg');
+    padding: 20px;
+    opacity: .7;
+}
+
+.player_container .player{
+    width: 50%;
+    margin: auto;
+    box-shadow: 0 8px 32px 0 rgb(31 38 135 / 73%);
+    backdrop-filter: blur( 0.5px );
+    -webkit-backdrop-filter: blur( 0.5px );
+    border-radius: 10px;
+    border: 1px solid rgba( 255, 255, 255, 0.18 );
+    padding: 20px !important;
+}
+
+
+.music_main_box .year_box{
+    color: #ed4099;
+}
+
+.singer_content{
+    align-items: stretch;
+}
+
+.comments_container .card,
+.comments .card{
+    background: rgba( 255, 255, 255, 0.15 );
+    box-shadow: 0 8px 32px 0 rgb(31 38 135 / 37%);
+    backdrop-filter: blur( 0.5px );
+    -webkit-backdrop-filter: blur( 0.5px );
+    border-radius: 10px;
+    border: 1px solid rgba( 255, 255, 255, 0.18 );
+}
+
+
+.comments_container .card h6{
+    width: 100%;
+    text-align: left;
+    color: #ed4099;
+}
+
+.comments .card-body p{
+    color: #0000007a;
+    font-size: 20px;
+}
+
+.comments .card-body h4{
+    color: #ed4099;
+    text-align: right;
+    font-size: 15px;
+}
+
+.comments{
+    background: rgba( 255, 255, 255, 0.15 );
+    box-shadow: 0 8px 32px 0 rgb(31 38 135 / 37%);
+    backdrop-filter: blur( 0.5px );
+    -webkit-backdrop-filter: blur( 0.5px );
+    border-radius: 10px;
+    border: 1px solid rgba( 255, 255, 255, 0.18 );
+    padding: 20px !important;
+}
+
+.comments .icon{
+    color: #ed4099;
+    margin-bottom: 20px;
+}
+
+.comments,
+.comments_container{
+    width: 80% !important;
+    margin: auto;
+}
+
+.comments_container{
+    padding: 0 !important;
+}
+
+.card-body button{
+    box-shadow: 0 8px 32px 0 rgb(31 38 135 / 37%) !important;
+    border: 1px solid #ed4099;
+    padding: 5px;
+    color: #ed4099;
+    background: #000;
+    padding: 10px;
+    display: block;
+    width: 200px;
+}
+
+.card-body textarea{
+    background: rgba( 0, 0, 0, 0.15 );
+    box-shadow: 0 8px 32px 0 rgb(31 38 135 / 37%);
+    backdrop-filter: blur( 0.5px );
+    -webkit-backdrop-filter: blur( 0.5px );
+    border-radius: 10px;
+    border: 1px solid rgba( 255, 255, 255, 0.18 );
+    padding: 20px !important;
+    color: #ed4099;
+}
+
+.card-body{
+    width: 100%;
+    padding: 10px !important;
+}
+
+.singer_content .detail_img{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: self-end;
+}
+
+.singer_content .col1{
+    padding: 0 !important;
+}
+
+.detail_main{
+    min-height: 100vh;
+    display: flex;
+    justify-content: center;
+}
+
+.carousel-caption{
+    position: absolute;
+    right: 15%;
+    left: 15%;
+    top: 50% !important;
+    transform: translateY(-50%) !important;
+}
+
+.carousel-control-next-icon, .carousel-control-prev-icon{
+    width: 4rem !important;
+    height: 4rem !important;
+}
+
+.about_container .col1 img{
+    width: 100%;
+    height: auto;
+}
+
+.base_main_about{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    min-height: 100vh;
+}
+
+.my_playlist{
+    width: 50%;
+    margin: auto;
+    background: rgba( 255, 255, 255, 0.15 );
+    box-shadow: 0 8px 32px 0 rgb(31 38 135 / 37%);
+    backdrop-filter: blur( 0.5px );
+    -webkit-backdrop-filter: blur( 0.5px );
+    border-radius: 10px;
+    border: 1px solid rgba( 255, 255, 255, 0.18 );
+    padding: 20px !important;
+}
+
+.track-name{
+    max-height: 50px;
+    width: 300px;
+    overflow-y: auto;
+}
+
+.about_container .row{
+    background: rgba( 255, 255, 255, 0.15 );
+    box-shadow: 0 8px 32px 0 rgb(31 38 135 / 37%);
+    backdrop-filter: blur( 0.5px );
+    -webkit-backdrop-filter: blur( 0.5px );
+    border-radius: 10px;
+    border: 1px solid rgba( 255, 255, 255, 0.18 );
+    padding: 20px !important;
+}
+
+.about_container .col2 p{
+    color: #0217FF;
+    font-size: 20px;
+    max-height: 350px;
+    overflow-y: scroll;
+}
+
+.carousel-caption h5{
+    font-size: 50px !important;
+    color: #ed4099 !important;
+}
+
+.carousel-caption a{
+    box-shadow: 0 8px 32px 0 rgb(31 38 135 / 37%);
+    border-radius: 10px;
+    border: 1px solid #ed4099;
+    padding: 5px;
+    color: #ed4099;
+    text-align: center;
+    text-decoration: none;
+    background: #000;
+    padding: 10px;
+    margin-top: 20px;
+    display: block;
+    width: 200px;
+    margin: auto;
+}
+
+.base_main{
+    min-height: 100vh;
+}
 
 .add_post_box{
     padding: 20px;
@@ -87,9 +311,10 @@ body{
 }
 
 .log_reg_form button{
-    background: linear-gradient(#0217FF, #ed4099) !important;
-    box-shadow: 0 8px 32px 0 rgb(31 38 135 / 37%);
+    background: #000 !important;
+    box-shadow: 1px 1px 10px #b2b2e2;
     border: none !important;
+    color: #fff;
 }
 
 .log_reg_form p{
@@ -102,6 +327,7 @@ body{
 .log_reg_form label{
     margin-right: 10px;
     margin-top: 20px;
+    color: #ed4099 !important;
 }
 .log_reg_form input{
     text-align: left !important;
@@ -122,10 +348,9 @@ html{
 }
 
 
-.logo{
-    background: -webkit-linear-gradient(#0217FF, #ed4099);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
+nav.navbar  .logo{
+    text-shadow: 1px 1px 0px #b2b2e2;
+    color: #000 !important;
     font-size: 51px !important;
 }
 
@@ -141,7 +366,7 @@ body{
     min-height: 79vh !important;
 }
 
-.signer_image{
+.singer_image{
     height: 375px;
     overflow: hidden;
     display: flex;
@@ -154,22 +379,43 @@ body{
     border-radius: 10px;
     border: 1px solid rgba( 255, 255, 255, 0.18 );
 }
+
+.singer_image,
 .music_image{
     height: 375px;
     overflow: hidden;
 }
 
-.music_image img{
-    transform: translateY(-10%) scale(1.3);
+.singer_image a{
+    width: 105%;
+    height: 100%;
+    display: flex;
+    justify-content: right;
+    align-items: flex-end;
+} 
+
+.singer_image a img{
+    height: 100%;
+    width: auto;
 }
 
-.signer_image img{
+.music_image img{
+    height: 100%;
+    width: auto;
+    transform: scale(1.6);
+}
+
+.user_profile_image img{
+    width: 100px;
+}
+
+.singer_image img{
     width: auto;
     height: 100%;
     border-radius: 10px;
 }
 
-.signer_name, 
+.singer_name, 
 .music_name{
     position: absolute;
     top: 85%;
@@ -183,7 +429,7 @@ body{
 }
 
 .music_name h3,
-.signer_name h3{
+.singer_name h3{
     font-size: 20px;
     text-align: center;
     margin-top: 20px;
@@ -192,26 +438,28 @@ body{
     margin: 0;
 }
 
-.signer_name h3{
-    color: #ed4099;
+.singer_box .singer_name h3{
+    color: #ed4099 !important;
 }
 
-.signer_box{
+.singer_box{
     position: relative;
     margin-top: 20px;
     border-radius: 10px;
 }
+
+.singer_box,
 .music_box{
     position: relative;
     margin-top: 50px;
-    background: rgba( 255, 255, 255, 0.35 );
+    background: #0217FF;
     box-shadow: 0 8px 32px 0 rgba( 0, 0, 0, 0.37 );
     backdrop-filter: blur( 9px );
     -webkit-backdrop-filter: blur( 9px );
     border-radius: 10px;
 }
 
-.signer_container{
+.singer_container{
     background-color: #000;
 }
 
@@ -223,6 +471,25 @@ footer{
     background: #000;
 }
 
+.music_container,
+.singer_container{
+    margin-right: 0 !important;
+    margin-left: 0 !important;
+}
+
+.singer_container{
+    min-height: 100vh;
+    background: #0217FF;
+}
+
+.user_profile_container{
+    min-height: 100vh;
+}
+
+.singer_container .title{
+    color: #0217FF;
+}
+
 footer div{
     color: #fff;
     margin-left: 20px;
@@ -230,16 +497,20 @@ footer div{
 }
 
 ul.pagination a{
-    background: #000;
+    background: transparent;
     border: none;
     font-size: 20px;
 }
 
-.signer_container ul.pagination a:hover{
+.singer_container ul.pagination a:hover{
     background-color: #ed4099;
 }
 
 .music_container ul.pagination a{
+    color: #0217FF;
+}
+
+.music_container ul.pagination a:hover{
     color: #ed4099;
 }
 
@@ -247,13 +518,13 @@ ul.pagination a{
     background-color: #0217FF;
 }
 
-.signer_container,
+.singer_container,
 .music_container{
     min-height: 100vh;
 }
 
 
-.signer_container ul.pagination{
+.singer_container ul.pagination{
     margin-top: 20px;
 }
 
@@ -267,7 +538,7 @@ ul.pagination{
     font-size: 55px;
 }
 
-.signer_container .title{
+.singer_container .title{
     color: #ed4099;
 }
 
@@ -280,7 +551,10 @@ nav.navbar a{
 }
 
 .navbar button{
-    background: #fff !important;
+    background: #000 !important;
+    box-shadow: 1px 1px 10px #b2b2e2;
+    border: none !important;
+    color: #fff;
 }
 
 
@@ -321,19 +595,19 @@ textarea[name='description']{
 }
 
 .music_image a,
-.signer_image a{
+.singer_image a{
     height: 100%;
     width: 100%;
 }
 
 .music_image,
-.signer_image{
+.singer_image{
     border-radius: 10px;
 }
 
 .search_box{
     display: flex;
-    justify-content: space-evenly;
+    justify-content: center;
     align-items: center;
     margin: auto;
     padding: 20px;
@@ -347,9 +621,18 @@ textarea[name='description']{
     margin-bottom: 20px;
 }
 
+.singer_container .page-link,
+.singer_container .search_box label{
+    color: #ed4099;
+}
+
 .search_box label{
     margin-bottom: 10px;
-    color: #fff;
+    color: #0217FF;
+}
+
+.add_post_box p a{
+    color: #ed4099;
 }
 
 .search_box button,
@@ -364,10 +647,25 @@ textarea[name='description']{
     backdrop-filter: blur( 9px );
     -webkit-backdrop-filter: blur( 9px );
     border-radius: 10px;
-    border: 1px solid rgba( 255, 255, 255, 0.18 );
+    border: 1px solid #ed4099;
     padding: 5px;
     color: #fff;
     text-align: center;
+    margin-left: 20px;
+}
+
+.search_box label{
+    margin-left: 20px;
+}
+
+.music_container .search_box button,
+.music_container .search_box input{
+    border: 1px solid #0217FF;
+}
+
+.search_box button:hover{
+    box-shadow: 0 8px 12px 0 rgba( 31, 38, 135, 0.37 );
+    color: #ed4099 !important;
 }
 
 .search_box input:focus-visible{
@@ -386,37 +684,100 @@ textarea[name='description']{
 .main_title{
     margin-top: 35px;
     margin-bottom: 35px;
-    background: -webkit-linear-gradient(#0217FF, #ed4099);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
+    color:  #ed4099;
     font-size: 51px !important;
     text-shadow: 0 8px 32px 0 rgb(31 38 135 / 37%);
 
 }
 
-.signer_detail_container .detail_img{
+.singer_detail_container .detail_img{
     display: flex;
     justify-content: center;
 }
 
-.signer_detail_container .detail_img img{
+.singer_detail_container .detail_img img{
     height: 100%;
     width: auto;
 }
 
-.music_detail_container .detail_img img{
+.music_detail_container{
     width: 100%;
-    transform: translateY(-25%);
-}
-
-.detail_img{
-    max-height: 500px;
-    overflow: hidden;
 }
 
 .music_main_box .col1{
     width: 100%;
     height: 100%;
+}
+
+.music_content{
+    position: relative;
+}
+
+.detail_img{
+    max-height: 700px;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.add_song_button{
+    box-shadow: 0 8px 32px 0 rgb(31 38 135 / 37%);
+    border-radius: 10px;
+    border: 1px solid #ed4099;
+    padding: 5px;
+    color: #ed4099;
+    text-align: center;
+    text-decoration: none;
+    background: #000;
+    padding: 10px;
+    margin-top: 20px;
+    display: block;
+}
+
+.music_main_box{
+    width: 80% !important;
+    margin: auto;
+}
+
+.profile{
+    margin-top: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.user_profile_container{
+    background-image: url('../images/profile/profile_back_img.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    opacity: 0.9;
+}
+
+.profile table{
+    color: red;
+    border-bottom: red;
+    background: rgb(0 0 0 / 23%);
+    box-shadow: 0 15px 32px 0 rgb(0 0 0 / 77%);
+    backdrop-filter: blur( 0.5px );
+    -webkit-backdrop-filter: blur( 0.5px );
+    border-radius: 10px;
+    border: 1px solid rgb(0 0 0 / 18%);
+    padding: 20px !important;
+}
+
+.profile table tr{
+    font-size: 25px !important;
+    text-shadow: 1px 1px 0px #090202;
+}
+
+.player.detail{
+    height: unset;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    box-shadow: 0 8px 32px 0 rgb(94 65 87);
 }
 
 .music_main_box .col2{
@@ -432,14 +793,19 @@ textarea[name='description']{
     text-align: center;
 }
 
-.music_main_box .music_content{
+.music_main_box{
     position: relative;
     overflow: hidden;
     width: 100%;
 }
 
+.music_content {
+    width: 100%;
+    min-height: 700px;
+}
+
 .song_detail_ h4,
-.signers h4{
+.singers h4{
     margin-top: 20px !important;
     margin-bottom: 20px !important;
 }
@@ -464,12 +830,15 @@ textarea[name='description']{
     height: 100%;
 }
 
-.signers{
+.singers{
     margin-top: 35px !important;
     margin-bottom: 35px;
+    width: 80% !important;
+    margin-left: auto;
+    margin-right: auto;
 }
 
-.signers,
+.singers,
 .song_detail_,
 .music_main_box{
     background: rgba( 255, 255, 255, 0.15 );
@@ -481,11 +850,6 @@ textarea[name='description']{
     padding: 20px !important;
 }
 
-.song_detail_{
-    margin-top: 35px;
-    margin-bottom: 35px;
-}
-
 .music-detail_container{
     padding: 0 !important;
 }
@@ -495,8 +859,8 @@ textarea[name='description']{
     padding-right: 0 !important;
 }
 
-.signer_content .col1,
-.signer_content .col2{
+.singer_content .col1,
+.singer_content .col2{
     padding: 20px;
     background: rgba( 255, 255, 255, 0.15 );
     box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
@@ -508,16 +872,16 @@ textarea[name='description']{
 }
 
 
-.signer_content .col2{
+.singer_content .col2{
     overflow-y: scroll;
 }
 
-.signer_content .col1{
+.singer_content .col1{
     margin-right: 20px;
     overflow: hidden;
 }
 
-.signer_content .col2 h3{
+.singer_content .col2 h3{
     margin-top: 20px;
     margin-bottom: 20px;
     background: -webkit-linear-gradient(#0217FF, #ed4099);
@@ -550,17 +914,17 @@ textarea[name='description']{
 }
 
 @media only screen and (max-width: 1100px){
-    .signer_content{
+    .singer_content{
         flex-direction: column;
         justify-content: center;
         align-items: center;
     }
 
-    .signer_content .col2{
+    .singer_content .col2{
         margin-top: 35px;
     }
 
-    .signer_content .col1 {
+    .singer_content .col1 {
         margin-right: 0;
     }    
 }
