--- a/templates/base/index.html
+++ b/templates/base/index.html
@@ -39,7 +39,7 @@
         <div class="carousel-item">
           <img src="{% static 'images/slider/slaider_img4.jpg' %}" class="d-block w-100" alt="...">
           <div class="carousel-caption d-none d-md-block">
-            <h5>Create Playlist</h5>
+            <h5>Login to Create Playlist</h5>
             {% if request.user.is_authenticated %}
               <a href="{% url 'user:my_playlist' request.user.username %}">My Playlist</a>
             {% else %}
