--- a/templates/header.html
+++ b/templates/header.html
@@ -33,7 +33,7 @@
           {% if request.user.is_authenticated %}
             <li><a href="{% url 'user:profile' request.user.username %}" class="navbar-brand">Profile</a></li>
             <li><a href="{% url 'user:my_playlist' request.user.username %}" class="navbar-brand">Playlist</a></li>
-            <li><a class="navbar-brand" href="{% url 'user:logout' %}">Logout ({{ request.user.username | title }})</a></li>
+            <li><a class="navbar-brand" href="{% url 'user:logout' %}">Logout</a></li>
           {% else %}
             <li><a class="navbar-brand" href="{% url 'user:register' %}">Register</a></li>
             <li><a class="navbar-brand" href="{% url 'user:login' %}">Login</a></li>
